--- a/DotsConnect/ios/Dots.Connect.xcodeproj/xcshareddata/xcschemes/DotsConnect-tvOS.xcscheme
+++ b/DotsConnect/ios/Dots.Connect.xcodeproj/xcshareddata/xcschemes/DotsConnect-tvOS.xcscheme
@@ -31,7 +31,7 @@
                BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
                BuildableName = "DotsConnect-tvOS.app"
                BlueprintName = "DotsConnect-tvOS"
-               ReferencedContainer = "container:DotsConnect.xcodeproj">
+               ReferencedContainer = "container:Dots.Connect.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -45,7 +45,7 @@
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
                BuildableName = "DotsConnect-tvOSTests.xctest"
                BlueprintName = "DotsConnect-tvOSTests"
-               ReferencedContainer = "container:DotsConnect.xcodeproj">
+               ReferencedContainer = "container:Dots.Connect.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -63,7 +63,7 @@
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
                BuildableName = "DotsConnect-tvOSTests.xctest"
                BlueprintName = "DotsConnect-tvOSTests"
-               ReferencedContainer = "container:DotsConnect.xcodeproj">
+               ReferencedContainer = "container:Dots.Connect.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -73,7 +73,7 @@
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
             BuildableName = "DotsConnect-tvOS.app"
             BlueprintName = "DotsConnect-tvOS"
-            ReferencedContainer = "container:DotsConnect.xcodeproj">
+            ReferencedContainer = "container:Dots.Connect.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -96,7 +96,7 @@
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
             BuildableName = "DotsConnect-tvOS.app"
             BlueprintName = "DotsConnect-tvOS"
-            ReferencedContainer = "container:DotsConnect.xcodeproj">
+            ReferencedContainer = "container:Dots.Connect.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -115,7 +115,7 @@
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
             BuildableName = "DotsConnect-tvOS.app"
             BlueprintName = "DotsConnect-tvOS"
-            ReferencedContainer = "container:DotsConnect.xcodeproj">
+            ReferencedContainer = "container:Dots.Connect.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
