--- a/DotsConnect/ios/Dots.Connect.xcodeproj/xcshareddata/xcschemes/DotsConnect.xcscheme
+++ b/DotsConnect/ios/Dots.Connect.xcodeproj/xcshareddata/xcschemes/DotsConnect.xcscheme
@@ -31,7 +31,7 @@
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
                BuildableName = "DotsConnect.app"
                BlueprintName = "DotsConnect"
-               ReferencedContainer = "container:DotsConnect.xcodeproj">
+               ReferencedContainer = "container:Dots.Connect.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -45,7 +45,7 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "DotsConnectTests.xctest"
                BlueprintName = "DotsConnectTests"
-               ReferencedContainer = "container:DotsConnect.xcodeproj">
+               ReferencedContainer = "container:Dots.Connect.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -63,7 +63,7 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "DotsConnectTests.xctest"
                BlueprintName = "DotsConnectTests"
-               ReferencedContainer = "container:DotsConnect.xcodeproj">
+               ReferencedContainer = "container:Dots.Connect.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -73,14 +73,14 @@
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "DotsConnect.app"
             BlueprintName = "DotsConnect"
-            ReferencedContainer = "container:DotsConnect.xcodeproj">
+            ReferencedContainer = "container:Dots.Connect.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -96,7 +96,7 @@
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "DotsConnect.app"
             BlueprintName = "DotsConnect"
-            ReferencedContainer = "container:DotsConnect.xcodeproj">
+            ReferencedContainer = "container:Dots.Connect.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -115,7 +115,7 @@
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "DotsConnect.app"
             BlueprintName = "DotsConnect"
-            ReferencedContainer = "container:DotsConnect.xcodeproj">
+            ReferencedContainer = "container:Dots.Connect.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
