--- a/DotsConnect/android/app/build.gradle
+++ b/DotsConnect/android/app/build.gradle
@@ -94,7 +94,7 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 26
     buildToolsVersion '28'
 
     defaultConfig {
@@ -152,6 +152,7 @@ dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
+    compile project(':mapbox-react-native-mapbox-gl')
 }
 
 // Run this once to be able to run the application with BUCK
