--- a/DotsConnect/package.json
+++ b/DotsConnect/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@mapbox/react-native-mapbox-gl": "^6.1.2-beta2",
     "react": "16.3.1",
     "react-native": "0.55.4"
   },
