--- a/DotsConnect/package.json
+++ b/DotsConnect/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "@mapbox/react-native-mapbox-gl": "^6.1.2-beta2",
     "react": "16.3.1",
-    "react-native": "0.55.4"
+    "react-native": "0.55.4",
+    "react-native-vector-icons": "^4.6.0",
+    "react-navigation": "^2.6.2"
   },
   "devDependencies": {
     "babel-jest": "23.2.0",
